[package]
name = "scailist"
version = "0.1.2"
authors = ["Seth Stadick <sstadick@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sstadick/ScAIList"
description = "A fast and easy interval overlap library"
documentation = "https://docs.rs/scailist"
readme = "README.md"
categories = ["algorithms", "science"]
keywords = ["tree", "interval", "bioinformatics", "ranges", "genomic"]

[dependencies]

[dev-dependencies]
criterion = "0.3"
rand = "0.7"

[[bench]]
name = "ailist_benchmarks"
harness = false
